# python-practice

./: .replit  pyproject.toml  python.csv  replit.nix
algorithms/: TwoSum.py  exchangesort.py  matrixmult.py  seqsearch.py
practice1/: Dicts.py  Lists.py  Loops.py  Requests.py  Tuples.py  pi_test.py
web_scrapper/: main.py
web_scrapper/extractors/: greedJapan.py  indeed.py  remoteok.py  wwr.py
web_scrapper/templates/: home.html  search.html
